Fixed a bug with the Slideshow.
The little buttons showing which slide the show was on were messed up
because of some sloppy, over-generalised CSS. Also fixed a problem with
the icons in the overlay being displayed too close together as well as
not having those nice colour transitions. Kinda missed those, so they're
back now :D

--- a/mii/src/index.css
+++ b/mii/src/index.css
@@ -5,6 +5,28 @@ body,
     padding: 0;
 }
 
+a i::before {
+    margin: 0 1vw;
+    transition: color 0.4s ease;
+}
+
+a i.fa-github:hover::before {
+    color: #4078c0;
+}
+
+a i.fa-globe:hover::before,
+a i.fa-at:hover::before {
+    color: #55efc4;
+}
+
+a i.fa-youtube:hover::before {
+    color: #ff0000;
+}
+
+a i.fa-google-play:hover::before {
+    color: #34a853;
+}
+
 blockquote {
     background-color: #DEDEDE;
 
